prevent horizontal scrolling

--- a/src/styles/SASS/main.scss
+++ b/src/styles/SASS/main.scss
@@ -41,6 +41,8 @@ body {
     font-family: -apple-system, "system-ui", "Segoe UI", Roboto, "Helvetica Neue", Arial, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
     font-family: $lead-font;
     // padding-left: 1rem;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 ul {
